--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
           <h1 class="main-screen__title">MEA Metal Applications</h1>
           <p class="main-screen__subtitle">ist ihr Spezialist für Norm-, Sonder- und Regalroste sowie Schiebebeschläge.</p>
           <p class="main-screen__text">Seit unserer Gründung 1886 arbeiten wir Hand in Hand mit Profis verschiedenster
-            Branchen und Bereichen. <br>Ihre branchenspezifischen Anforderungen kennen wir und haben uns über mehrere Jahre
-            hinweg ein fundiertes Praxiswissen <br>angeeignet. Mit diesem Know-How haben wir eine Basis geschaffen, auf die
+            Branchen und Bereichen. Ihre branchenspezifischen Anforderungen kennen wir und haben uns über mehrere Jahre
+            hinweg ein fundiertes Praxiswissen angeeignet. Mit diesem Know-How haben wir eine Basis geschaffen, auf die
             wir aufbauen können und unsere Produkte und Systemlösungen stetig weiterentwickeln können. Unseren Ideen und
             Innovationen sind keine Grenzen gesetzt.</p>
         </div>
