--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
                 <img src="images/MEASTEP_Treppenbausatz/st_image_1.png" alt="text">
               </div>
               <div class="module-action__text">
-                MEAFLOOR - <strong>für noch mehr<br>Komfort und Sicherheit</strong>
+                MEAFLOOR - <strong>für noch mehr Komfort und Sicherheit</strong>
               </div>
             </a>
             <a href="#module-3d" class=" module-action-small module__actions-item  js-modal-open spline-modal">
