--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
               <div class="module__text-block">Der Treppenbausatz MEASTEP ist eine Innovation, die Ihnen das Leben in
                 vielerlei Hinsicht einfacher macht.<br>
                 Die stabile Treppe mit geteilten Stahlwangen kann unkompliziert im LKW transportiert werden und ist vor
-                Ort ohne Bohren und Nach-arbeiten schnell und sicher aufgebaut. Sie ist zum Beispiel in Lagerhallen als
+                Ort ohne Bohren und Nacharbeiten schnell und sicher aufgebaut. Sie ist zum Beispiel in Lagerhallen als
                 Zugang zu Lagerbühnen bestens geeignet. Die Treppe ist witterungsbeständig, standsicher und wird mit den
                 bewährten MEASTEP XSL Stufen geliefert. Je nach Bausatz können Höhen bis 5,98 Meter überwunden werden.
                 Der
